[package]
name = "boq"
version = "0.1.0"
edition = "2024"

[dependencies]
amq-protocol-types = "7.1.2"
amq-protocol-uri = "7.1.2"
anyhow = "1.0.72"
axum = { version = "0.7.1" }
axum-extra = { version = "0.9.0", features = ["typed-header"] }
clap = { version = "4.3.19", features = ["derive"] }
configparser = "3.0.2"
console-subscriber = "0.2.0"
constant_time_eq = "0.3.0"
deadpool-postgres = "0.11.0"
django-signing = "0.0.0"
futures-lite = "2.0.1"
gravatar-rs = "0.2.2"
hex = "0.4.3"
hmac = "0.12.1"
http-body-util = "0.1.0"
hyper = "1.0.1"
hyper-util = { version = "0.1.1", features = ["http1", "tokio"] }
lapin = { version = "2.3.1", default-features = false }
serde = { version = "1.0.178", features = ["derive", "rc"] }
serde_json = "1.0.105"
serde_repr = "0.1.16"
serde_with = { version = "3.1.0", features = ["json"] }
sha1 = "0.10.5"
sha2 = "0.10.7"
slab = "0.4.9"
tokio = { version = "1.29.1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "tracing"
] }
tokio-executor-trait = "2.1.1"
tokio-postgres = "0.7.9"
tokio-reactor-trait = "1.1.0"
tower-service = "0.3.2"
tracing = "0.1.37"
url = "2.4.1"
uuid = { version = "1.4.1", features = ["fast-rng", "v4", "serde"] }
